@@ -33,24 +33,27 @@
 (define (gnc:date-get-week-day datevec)
   (+ (vector-ref datevec 6) 1))
 ;; jan 1 == 1
+
 (define (gnc:date-get-year-day datevec)
   (+ (vector-ref datevec 7) 1))
 
-;; fixme: internationalize
+(define (gnc:timepair-get-year tp)
+  (gnc:date-get-year (localtime (gnc:timepair->secs tp))))
+
+(define (gnc:timepair-get-month-day tp)
+  (gnc:date-get-month (localtime (gnc:timepair->secs tp))))
+
+(define (gnc:timepair-get-month tp)
+  (gnc:date-get-month (localtime (gnc:timepair->secs tp))))
+
+(define (gnc:timepair-get-week-day tp)
+  (gnc:date-get-week-day (localtime (gnc:timepair->secs tp))))
+
+(define (gnc:timepair-get-year-day tp)
+  (gnc:date-get-year-day (localtime (gnc:timepair->secs tp))))
+
 (define (gnc:date-get-month-string datevec)
-  (case (gnc:date-get-month datevec)
-    ((1) "January")
-    ((2) "February")
-    ((3) "March")
-    ((4) "April")
-    ((5) "May")
-    ((6) "June")
-    ((7) "July")
-    ((8) "August")
-    ((9) "September")
-    ((10) "October")
-    ((11) "November")
-    ((12) "December")))
+  (strftime "%B" datevec))
 
 ;; is leap year?
 (define (gnc:leap-year? year)
@@ -144,14 +147,40 @@
 
 (define gnc:timepair-lt gnc:timepair-later)
 
+(define (gnc:timepair-earlier t1 t2)
+  (gnc:timepair-later t2 t1))
+
 ;; t1 <= t2
 (define (gnc:timepair-le t1 t2)
   (cond ((< (car t1) (car t2)) #t)
         ((= (car t1) (car t2)) (<= (cdr t2) (cdr t2)))
         (else #f)))
 
+(define (gnc:timepair-ge t1 t2)
+  (gnc:timepair-le t2 t1))
+
 (define (gnc:timepair-eq t1 t2)
   (and (= (car t1) (car t2)) (= (cdr t1) (cdr t2))))
+
+;; date-granularity comparison functions.
+
+(define (gnc:timepair-earlier-date t1 t2)
+  (gnc:timepair-earlier (gnc:timepair-canonical-day-time t1)
+			(gnc:timepair-canonical-day-time t2)))
+
+(define (gnc:timepair-later-date t1 t2)
+  (gnc:timepair-earlier-date t2 t1))
+
+(define (gnc:timepair-le-date t1 t2)
+  (gnc:timepair-le (gnc:timepair-canonical-day-time t1)
+		   (gnc:timepair-canonical-day-time t2)))
+
+(define (gnc:timepair-ge-date t1 t2)
+  (gnc:timepair-le t2 t1))
+
+(define (gnc:timepair-eq-date t1 t2)
+  (gnc:timepair-eq (gnc:timepair-canonical-day-time t1)
+		   (gnc:timepair-canonical-day-time t2)))
 
 ;; Build a list of time intervals 
 (define (dateloop curd endd incr) 
@@ -211,6 +240,9 @@
    (+ (car tp)
       (/ (cdr tp) 1000000000))))
 
+(define (gnc:timepair->date tp)
+  (localtime (gnc:timepair->secs tp)))
+
 ;; Find difference in seconds time 1 and time2
 (define (gnc:timepair-delta t1 t2)
   (- (gnc:timepair->secs t2) (gnc:timepair->secs t1)))
@@ -221,7 +253,7 @@
 ;;; Added from transaction-report.scm
 
 (define (gnc:timepair-to-datestring tp)
-  (let ((bdtime (localtime (car tp))))
+  (let ((bdtime (localtime (gnc:timepair->secs tp))))
     (strftime "%x" bdtime)))
 
 ;; given a timepair contains any time on a certain day (local time)
